Fixing the text contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ fieldset .article-header {
   height: 40px;
   font-size: 11px;
   padding-left: 1px;
-  color: white; /* Make the text transparent because the actual text is in the 'content' of ::after */
+  color: #ee4684; /* Make the text transparent because the actual text is in the 'content' of ::after */
   background:rgba(0, 0, 0, 0.01);
   border: none;
 }
@@ -307,7 +307,7 @@ fieldset .article-header {
   /* Fill each button text content individually */
   content: "";
   font-size: 11px;
-  line-height: 35px;
+  line-height: 36px;
   background-size: cover;
   background-repeat: no-repeat;
   top: 0;
